--- a/lang/en/texts/new-nutriscore.html
+++ b/lang/en/texts/new-nutriscore.html
@@ -1,7 +1,5 @@
-
-
 <center>
-  <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20center%20-%20EN.png" alt="Nutri-Score evolves - A closer look">
+  <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20center%20-%20EN.png" alt="Nutri-Score evolves - A closer look">
 </center>
 
 <div>
@@ -11,7 +9,7 @@
 <h2 class="title-2 emphasized-title">
     <strong>What is Nutri-Score?</strong>
 </h2>
-<img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/What%20is%20the%20Nutri-Score%20-%20EN.png" alt="What is the Nutri-Score">
+<img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/What%20is%20the%20Nutri-Score%20-%20EN.png" alt="What is the Nutri-Score">
 <p>Nutri-Score is a logo that aims to inform you about the nutritional quality of food.&nbsp;The color code ranges from dark green (A) for the healthiest products to dark red (E) for the least healthy.</p>
 <a class="button round secondary small" href="/nutriscore">Read our explanation page about the Nutri-Score</a>
 
@@ -19,8 +17,8 @@
     <strong>Why is Nutri-Score changing?</strong>
 </h2>
 
-            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20facts%20-%20EN.png" alt="Nutri-Score facts">
-            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Why%20a%20new%20algorithm%20-%20EN.png" alt="Why a new algorithm">
+            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20facts%20-%20EN.png" alt="Nutri-Score facts">
+            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Why%20a%20new%20algorithm%20-%20EN.png" alt="Why a new algorithm">
 <p>The Nutri-Score formula is evolving to provide better recommendations:</p>
 <ul>
    <li><strong>Better evaluate all drinks</strong>&nbsp;-&nbsp;The comparative scores of milk,&nbsp;sweetened dairy drinks,&nbsp;and plant-based drinks have been better differentiated in the new algorithm.</li>
@@ -37,12 +35,13 @@
 <p>From now on,&nbsp;the logo can display a &quot;New calculation&quot; mention to clarify that it is indeed the new calculation.</p>
 
 <h2 class="title-2 emphasized-title"><strong>Where to find the new Nutri-Score calculation?</strong></h2>
-<p>Nutri-Score is in use in several countries:&nbsp;Germany,&nbsp;Belgium,&nbsp;Spain,&nbsp;France,&nbsp;Luxembourg,&nbsp;the Netherlands,&nbsp;and Switzerland.</p>
-<p>Manufacturers have until 2026 at the latest to replace the old calculation with the new one.</p>
+<p>Nutri-Score is in use in several countries:&nbsp;Germany,&nbsp;Belgium,&nbsp;Spain,&nbsp;Luxembourg,&nbsp;the Netherlands,&nbsp;and Switzerland.</p>
+<p>Manufacturers have at most 2 years at the latest after the decree is signed to replace the old calculation with the new one.</p>
 <p>Without waiting,&nbsp;you can already find the new calculation in the Open Food Facts application,&nbsp;even if the manufacturers have not updated the score.</p>
 
 <h2 class="title-2 emphasized-title"><strong>What does not change</strong></h2>
 <p>Nutri-Score is a score designed to measure nutritional quality.&nbsp;It is complementary to the NOVA group on ultra-processed foods (also present in the application).</p>
+<p>In France, the new computation of the Nutri-Score will get legally in force once the "Arrêté" is signed. The new computation will then progressively arrive on the product packagings.
 <p>For manufacturers, the display of Nutri-Score remains optional.</p>
 
 <h2 class="title-2 emphasized-title">The algorithm is evolving to be more in line with dietary recommendations</h2>
@@ -51,7 +50,7 @@
 <p>The EREN* scientific team has completely&nbsp;<strong>reviewed the algorithm</strong>&nbsp;used to calculate the Nutri-Score, resulting in more scores that better reflect the nutritional quality of products,&nbsp;<strong>with many of them losing a grade</strong>.</p>
 <p><strong>✅&nbsp;</strong><strong>Distinctive banner for new calculation</strong>&nbsp;</p>
 <p>Nutri-Score v2 will have&nbsp;<strong>a distinctive banner</strong>&nbsp;indicating that it has been calculated using&nbsp;<strong>the new formula</strong>. While the banner is not mandatory on packs, it provides assurance that the Nutri-Score has been correctly calculated.</p>
-<img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/before-after-en.png" alt="" width="600px" border="0" />
+<img src="https://world.openfoodfacts.org/images/misc/new-nutriscore/before-after-en.png" alt="" width="600px" border="0" />
 <h2 class="title-2 emphasized-title">Where can you find the Nutri-Score V2 ?</h1>
 <ul>
    <li><strong>The Open Food Facts website:</strong>&nbsp;You can find Nutri-Score v2 on the product pages of our website,&nbsp;<a href="https://world.openfoodfacts.org/"><u>Open Food Facts</u></a>.</li>
@@ -65,11 +64,11 @@
    <li><strong>If you&rsquo;re covering this subject,</strong>&nbsp;we have a press kit around Nutri-Score V2 and Open Food Facts. We also did a press webinar a few hours ago that will be available shortly for replay. If you&rsquo;d like to be added to our press listings for advance briefings, please get in touch at&nbsp;<a href="mailto:presse@openfoodfacts.org"><u>presse@openfoodfacts.org</u></a></li>
 </ul>
 
-<!--<a class="button round secondary small" href="https://blog.openfoodfacts.org/en/nutriscore-v2-presskit">Nutri-Score v2 presskit</a>-->
+<a class="button round secondary small" href="https://blog.openfoodfacts.org/en/new-nutri-score-v2-presskit">Nutri-Score v2 presskit</a>
 
 <h2 class="title-2 emphasized-title">Open Food Facts and the Nutri-Score</h1>
 <h4>Open Food Facts has been a historical supporter of the Nutri-Score since 2014.&nbsp;</h4>
-<img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20%26%20Open%20Food%20Facts%20-%20EN.png" alt="Nutri-Score and Open Food Facts">
+<img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20%26%20Open%20Food%20Facts%20-%20EN.png" alt="Nutri-Score and Open Food Facts">
 <a class="button round secondary small" href="/open-food-facts-and-the-nutriscore">Read our page Open Food Facts and the Nutri-Score</a>
 
 <p>We believe that Nutri-Score v2 is&nbsp;<strong>a valuable tool</strong>&nbsp;for consumers, food manufacturers, and retailers alike.&nbsp;</p>
@@ -85,46 +84,46 @@
     <h3>Milks</h3>
     <div class="carousel-container">
         <div class="carousel">
-            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Milks%20-%20whole%20-%20EN.png" alt="Nutri-Score for whole milk">
-            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Milks%20-%20skimmed%20-%20EN.png" alt="Nutri-Score for skimmed milk">
+            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Milks%20-%20whole%20-%20EN.png" alt="Nutri-Score for whole milk">
+            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Milks%20-%20skimmed%20-%20EN.png" alt="Nutri-Score for skimmed milk">
         </div>
     </div>
 
     <h3>Beverages</h3>
     <div class="carousel-container">
         <div class="carousel">
-            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Beverages%20-%20Juices%20-%20EN.png" alt="Nutri-Score for fruit juices">
-            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Beverages%20-%20Water%20-%20EN.png" alt="Nutri-Score for water">
-            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Sugar%20sweetened%20beverages%20-%20EN.png" alt="Nutri-Score for sugar-sweetened beverages">
-            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Sugar%20sweetened%20beverages%20-%20Zero%20cola%20-%20EN.png" alt="Nutri-Score for zero-sugar cola">
+            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Beverages%20-%20Juices%20-%20EN.png" alt="Nutri-Score for fruit juices">
+            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Beverages%20-%20Water%20-%20EN.png" alt="Nutri-Score for water">
+            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Sugar%20sweetened%20beverages%20-%20EN.png" alt="Nutri-Score for sugar-sweetened beverages">
+            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Sugar%20sweetened%20beverages%20-%20Zero%20cola%20-%20EN.png" alt="Nutri-Score for zero-sugar cola">
         </div>
     </div>
 
     <h3>Sweetened & Flavored Drinks</h3>
     <div class="carousel-container">
         <div class="carousel">
-            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Sweetened%20%26%20Flavored%20Drinks%20-%20Drinkable%20yogurt%20-%20EN.png" alt="Nutri-Score for drinkable yogurt">
-            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Sweetened%20%26%20Flavored%20Drinks%20-%20Milk%20shake%20-%20EN.png" alt="Nutri-Score for milkshake">
+            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Sweetened%20%26%20Flavored%20Drinks%20-%20Drinkable%20yogurt%20-%20EN.png" alt="Nutri-Score for drinkable yogurt">
+            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Sweetened%20%26%20Flavored%20Drinks%20-%20Milk%20shake%20-%20EN.png" alt="Nutri-Score for milkshake">
         </div>
     </div>
 
     <h3>Oils</h3>
     <div class="carousel-container">
         <div class="carousel">
-            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Oils%20-%20Olive%20-%20EN.png" alt="Nutri-Score for olive oil">
-            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Oils%20-%20Sunflower%20-%20EN.png" alt="Nutri-Score for sunflower oil">
+            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Oils%20-%20Olive%20-%20EN.png" alt="Nutri-Score for olive oil">
+            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Oils%20-%20Sunflower%20-%20EN.png" alt="Nutri-Score for sunflower oil">
         </div>
     </div>
 
     <h3>Poultry and fish</h3>
     <div class="carousel-container">
         <div class="carousel">
-            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Poultry%20-%20EN.png" alt="Nutri-Score for poultry">
-            <img width="200px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Fatty%20fish%20-%20EN.png" alt="Nutri-Score for fatty fish">
+            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Poultry%20-%20EN.png" alt="Nutri-Score for poultry">
+            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Fatty%20fish%20-%20EN.png" alt="Nutri-Score for fatty fish">
         </div>
     </div>
 
 <!--
-            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20dark%20-%20EN.png" alt="Nutri-Score evolves - A closer look">
-            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20EN%20-%20light.png" alt="Nutri-Score evolves - A closer look">
+            <img src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20dark%20-%20EN.png" alt="Nutri-Score evolves - A closer look">
+            <img src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20EN%20-%20light.png" alt="Nutri-Score evolves - A closer look">
 -->
