--- a/lang/en/texts/new-nutriscore.html
+++ b/lang/en/texts/new-nutriscore.html
@@ -17,8 +17,8 @@
     <strong>Why is Nutri-Score changing?</strong>
 </h2>
 
-            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20facts%20-%20EN.png" alt="Nutri-Score facts">
-            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Why%20a%20new%20algorithm%20-%20EN.png" alt="Why a new algorithm">
+<img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20facts%20-%20EN.png" alt="Nutri-Score facts">
+<img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Why%20a%20new%20algorithm%20-%20EN.png" alt="Why a new algorithm">
 <p>The Nutri-Score formula is evolving to provide better recommendations:</p>
 <ul>
    <li><strong>Better evaluate all drinks</strong>&nbsp;-&nbsp;The comparative scores of milk,&nbsp;sweetened dairy drinks,&nbsp;and plant-based drinks have been better differentiated in the new algorithm.</li>
@@ -26,6 +26,13 @@
    <li><strong>Salt and sugar penalized</strong>&nbsp;-&nbsp;Products that are too sweet or too salty will see their rating further downgraded.</li>
    <li><strong>Prioritization of oils and fish</strong>&nbsp;-&nbsp;The rating of some fatty fish and oils rich in good fats will improve.</li>
    <li><strong>Limit red meat</strong>&nbsp;-&nbsp;Red meat consumption should be limited.&nbsp;This is why poultry will be comparatively better ranked.</li>
+</ul>
+
+<ul>
+<li><strong>The rating of oils rich in good fats (olive, rapeseed, walnut, flax, etc.) and certain oily fish (mackerel, sardines, herring, etc.) is improving.</strong></li>
+<li><strong>It is easier to identify whole products, rich in fiber, which now have better scores than their refined equivalents</strong></li>
+<li><strong>The new Nutri-Score rates sweet and salty foods more severely.</strong></li>
+<li><strong>In the meat section, poultry is now ranked higher than red meat.</strong></li>
 </ul>
 
 <h2 class="title-2 emphasized-title">
@@ -77,8 +84,6 @@
 <p><strong>✔&nbsp;</strong>helping consumers make informed choices</p>
 <p><strong>✔&nbsp;</strong>encouraging food manufacturers to improve the nutritional profile of their products.</p>
 <h2 class="title-2 emphasized-title">Some of the changes at a glance</h2>
-
-
     <h2>Nutri-Score Visuals</h2>
 
     <h3>Milks</h3>
