--- a/lang/en/texts/new-nutriscore.html
+++ b/lang/en/texts/new-nutriscore.html
@@ -1,5 +1,5 @@
 <center>
-  <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20center%20-%20EN.png" alt="Nutri-Score evolves - A closer look">
+  <img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20center%20-%20EN.png" alt="Nutri-Score evolves - A closer look">
 </center>
 
 <div>
@@ -9,7 +9,7 @@
 <h2 class="title-2 emphasized-title">
     <strong>What is Nutri-Score?</strong>
 </h2>
-<img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/What%20is%20the%20Nutri-Score%20-%20EN.png" alt="What is the Nutri-Score">
+<img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/What%20is%20the%20Nutri-Score%20-%20EN.png" alt="What is the Nutri-Score">
 <p>Nutri-Score is a logo that aims to inform you about the nutritional quality of food.&nbsp;The color code ranges from dark green (A) for the healthiest products to dark red (E) for the least healthy.</p>
 <a class="button round secondary small" href="/nutriscore">Read our explanation page about the Nutri-Score</a>
 
@@ -17,8 +17,8 @@
     <strong>Why is Nutri-Score changing?</strong>
 </h2>
 
-            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20facts%20-%20EN.png" alt="Nutri-Score facts">
-            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Why%20a%20new%20algorithm%20-%20EN.png" alt="Why a new algorithm">
+            <img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20facts%20-%20EN.png" alt="Nutri-Score facts">
+            <img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Why%20a%20new%20algorithm%20-%20EN.png" alt="Why a new algorithm">
 <p>The Nutri-Score formula is evolving to provide better recommendations:</p>
 <ul>
    <li><strong>Better evaluate all drinks</strong>&nbsp;-&nbsp;The comparative scores of milk,&nbsp;sweetened dairy drinks,&nbsp;and plant-based drinks have been better differentiated in the new algorithm.</li>
@@ -51,7 +51,7 @@
 <p><strong>✅&nbsp;</strong><strong>Distinctive banner for new calculation</strong>&nbsp;</p>
 <p>Nutri-Score v2 will have&nbsp;<strong>a distinctive banner</strong>&nbsp;indicating that it has been calculated using&nbsp;<strong>the new formula</strong>. While the banner is not mandatory on packs, it provides assurance that the Nutri-Score has been correctly calculated.</p>
 <img src="https://world.openfoodfacts.org/images/misc/new-nutriscore/before-after-en.png" alt="" width="600px" border="0" />
-<h2 class="title-2 emphasized-title">Where can you find the Nutri-Score V2 ?</h1>
+<h2 class="title-2 emphasized-title">Where can you find the new Nutri-Score?</h1>
 <ul>
    <li><strong>The Open Food Facts website:</strong>&nbsp;You can find Nutri-Score v2 on the product pages of our website,&nbsp;<a href="https://world.openfoodfacts.org/"><u>Open Food Facts</u></a>.</li>
    <li><strong>The official Open Food Facts mobile app:</strong>&nbsp;The Nutri-Score v2 is also available today on&nbsp;<a href="https://world.openfoodfacts.org/open-food-facts-mobile-app?utm_source=off&amp;utf_medium=web&amp;utm_campaign=search_and_links_promo_en"><u>our mobile app</u></a>, allowing you to scan products and see their nutritional scores on the go.</li>
@@ -61,14 +61,14 @@
 </ul>
 <h2 class="title-2 emphasized-title">For journalists</h1>
 <ul>
-   <li><strong>If you&rsquo;re covering this subject,</strong>&nbsp;we have a press kit around Nutri-Score V2 and Open Food Facts. We also did a press webinar a few hours ago that will be available shortly for replay. If you&rsquo;d like to be added to our press listings for advance briefings, please get in touch at&nbsp;<a href="mailto:presse@openfoodfacts.org"><u>presse@openfoodfacts.org</u></a></li>
+   <li><strong>If you&rsquo;re covering this subject,</strong>&nbsp;we have a press kit around the new Nutri-Score and Open Food Facts. We also did a press webinar a few hours ago that will be available shortly for replay. If you&rsquo;d like to be added to our press listings for advance briefings, please get in touch at&nbsp;<a href="mailto:presse@openfoodfacts.org"><u>presse@openfoodfacts.org</u></a></li>
 </ul>
 
 <a class="button round secondary small" href="https://blog.openfoodfacts.org/en/new-nutri-score-v2-presskit">Nutri-Score v2 presskit</a>
 
 <h2 class="title-2 emphasized-title">Open Food Facts and the Nutri-Score</h1>
 <h4>Open Food Facts has been a historical supporter of the Nutri-Score since 2014.&nbsp;</h4>
-<img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20%26%20Open%20Food%20Facts%20-%20EN.png" alt="Nutri-Score and Open Food Facts">
+<img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20%26%20Open%20Food%20Facts%20-%20EN.png" alt="Nutri-Score and Open Food Facts">
 <a class="button round secondary small" href="/open-food-facts-and-the-nutriscore">Read our page Open Food Facts and the Nutri-Score</a>
 
 <p>We believe that Nutri-Score v2 is&nbsp;<strong>a valuable tool</strong>&nbsp;for consumers, food manufacturers, and retailers alike.&nbsp;</p>
@@ -84,42 +84,42 @@
     <h3>Milks</h3>
     <div class="carousel-container">
         <div class="carousel">
-            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Milks%20-%20whole%20-%20EN.png" alt="Nutri-Score for whole milk">
-            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Milks%20-%20skimmed%20-%20EN.png" alt="Nutri-Score for skimmed milk">
+            <img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Milks%20-%20whole%20-%20EN.png" alt="Nutri-Score for whole milk">
+            <img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Milks%20-%20skimmed%20-%20EN.png" alt="Nutri-Score for skimmed milk">
         </div>
     </div>
 
     <h3>Beverages</h3>
     <div class="carousel-container">
         <div class="carousel">
-            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Beverages%20-%20Juices%20-%20EN.png" alt="Nutri-Score for fruit juices">
-            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Beverages%20-%20Water%20-%20EN.png" alt="Nutri-Score for water">
-            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Sugar%20sweetened%20beverages%20-%20EN.png" alt="Nutri-Score for sugar-sweetened beverages">
-            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Sugar%20sweetened%20beverages%20-%20Zero%20cola%20-%20EN.png" alt="Nutri-Score for zero-sugar cola">
+            <img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Beverages%20-%20Juices%20-%20EN.png" alt="Nutri-Score for fruit juices">
+            <img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Beverages%20-%20Water%20-%20EN.png" alt="Nutri-Score for water">
+            <img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Sugar%20sweetened%20beverages%20-%20EN.png" alt="Nutri-Score for sugar-sweetened beverages">
+            <img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Sugar%20sweetened%20beverages%20-%20Zero%20cola%20-%20EN.png" alt="Nutri-Score for zero-sugar cola">
         </div>
     </div>
 
     <h3>Sweetened & Flavored Drinks</h3>
     <div class="carousel-container">
         <div class="carousel">
-            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Sweetened%20%26%20Flavored%20Drinks%20-%20Drinkable%20yogurt%20-%20EN.png" alt="Nutri-Score for drinkable yogurt">
-            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Sweetened%20%26%20Flavored%20Drinks%20-%20Milk%20shake%20-%20EN.png" alt="Nutri-Score for milkshake">
+            <img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Sweetened%20%26%20Flavored%20Drinks%20-%20Drinkable%20yogurt%20-%20EN.png" alt="Nutri-Score for drinkable yogurt">
+            <img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Sweetened%20%26%20Flavored%20Drinks%20-%20Milk%20shake%20-%20EN.png" alt="Nutri-Score for milkshake">
         </div>
     </div>
 
     <h3>Oils</h3>
     <div class="carousel-container">
         <div class="carousel">
-            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Oils%20-%20Olive%20-%20EN.png" alt="Nutri-Score for olive oil">
-            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Oils%20-%20Sunflower%20-%20EN.png" alt="Nutri-Score for sunflower oil">
+            <img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Oils%20-%20Olive%20-%20EN.png" alt="Nutri-Score for olive oil">
+            <img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Oils%20-%20Sunflower%20-%20EN.png" alt="Nutri-Score for sunflower oil">
         </div>
     </div>
 
     <h3>Poultry and fish</h3>
     <div class="carousel-container">
         <div class="carousel">
-            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Poultry%20-%20EN.png" alt="Nutri-Score for poultry">
-            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Fatty%20fish%20-%20EN.png" alt="Nutri-Score for fatty fish">
+            <img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Poultry%20-%20EN.png" alt="Nutri-Score for poultry">
+            <img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Fatty%20fish%20-%20EN.png" alt="Nutri-Score for fatty fish">
         </div>
     </div>
 
